fix up subtitle position on mobile

--- a/_sass/base-design.scss
+++ b/_sass/base-design.scss
@@ -160,10 +160,6 @@ header.page-header {
       p.subtitle {
         font-family: $font-title;
         font-size: 1.5rem;
-        text-align: right;
-        padding-top: 3rem;
-        padding-right: 0rem;
-        padding-left: 5rem;
       }
       h1 {
         font-size: 3rem;
